Fix the button and make the heater turn on too.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </form>
 
 <form action="/control" >
-    <input type="button" name="preheat_domestic">Preheat Domestic Hot Water</input>
+    <input type="button" name="preheat_domestic" value="preheat">Preheat Domestic Hot Water</input>
 </form>
 
 </body>
