--- a/index.html
+++ b/index.html
@@ -34,36 +34,22 @@
 	<br/>
 	<br/>
 	<br/>
-<!--
-<form action="/control" >
-    <input type="hidden" name="fan_goal_state" value="run"/>
-    <button type="submit" name="fan_duration" value="1h">Run Fan - 1h</button>
-</form>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-<form action="/control" >
-    <input type="hidden" name="fan_goal_state" value="run"/>
-    <button type="submit" name="fan_duration" value="2h">Run Fan - 2h</button>
-</form>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-<form action="/control" >
-    <input type="hidden" name="fan_goal_state" value="run"/>
-    <button type="submit" name="fan_duration" value="4h">Run Fan - 4h</button>
-</form>
--->
-	<br/>
-	<br/>
-	<br/>
-	<br/>
-	<br/>
 <form action="/control" >
     <button type="submit" name="preheat_domestic" value="preheat">Preheat Domestic Hot Water</button>
 </form>
 
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+<form action="/control" >
+    Run the downstairs heat for a specific period of time:<br/>
+    <input type="text" name="heat_duration"/> (example: 30s, 3h, 2h30m)
+    <input type="hidden" name="heat_goal_state" value="run"/>
+</form>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
 </body>
 </html>
