Attempt to make the heater heat to a goal temperature.

--- a/index.html
+++ b/index.html
@@ -51,5 +51,14 @@
 	<br/>
 	<br/>
 	<br/>
+<form action="/control" >
+    Set the downstairs temperature:<br/>
+    <input type="text" name="heat_target"/> (example: 69.3)
+    <input type="hidden" name="heat_goal_state" value="maintain"/>
+</form>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
 </body>
 </html>
